<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="296dp"
    android:layout_height="wrap_content"
    android:backgroundTint="#61C066"
    app:cardCornerRadius="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_kodeMatkul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/kode_matkul"
            android:textColor="#F8F7F5"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_namaMatkul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/nama_matkul"
            android:textColor="#F8F7F5"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_kodeMatkul" />

        <TextView
            android:id="@+id/tv_jadwalMatkul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="16dp"
            android:text="@string/jam_matkul"
            android:textColor="#F8F7F5"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_namaMatkul" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/tv_dosenProfilePicture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:src="#888888"
            app:layout_constraintBottom_toTopOf="@id/tv_dosenMatkul"
            app:layout_constraintEnd_toEndOf="@id/tv_dosenMatkul"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_dosenMatkul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/prof"
            android:textColor="#F8F7F5"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_jadwalMatkul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_jadwalMatkul" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>